--- a/.github/workflows/main_webapp-sam47625313.yml
+++ b/.github/workflows/main_webapp-sam47625313.yml
@@ -39,23 +39,13 @@ jobs:
     runs-on: windows-latest
     needs: build
     
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: .net-app
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_8B4DA5BC51D24FD7BD1163BEDDDE2924 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2F7D21B38A5C46A08041E78D2F857C33 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F766979D75FF441D85EE8BA265325975 }}
-
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -63,4 +53,4 @@ jobs:
           app-name: 'webapp-sam47625313'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2E784A51AAC04090B78A1717D26E787E }}
